--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-  <script language="javascript" type="text/javascript" src="./rule777.js"></script>
+  <script language="javascript" type="text/javascript" src="rule777.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
